Resolves: tdf#100538 make searching in shape text a libreoffice-kit only thing

This effectively reverts for the normal-app

commit bdc1824ea7acfa2fe9d71cdbe57882acce155577
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Tue May 19 17:20:10 2015 +0200

    SwPaM::Find: search in shapes anchored to the range

The catches are that...

writer will use SvxSearchCmd::Find and not SvxSearchCmd::Replace when Replacing
text, and replacing it afterwards. So replace doesn't work. It might be possible
to mitigate that by passing down the m_bReplace to SwPam::Find and do a
SvxSearchCmd::Replace on the editeng SearchAndReplace in that case and then change
the return code to not-found/found-in-writer/found-in-drawing to figure out what
to do there.

regexps are disabled in the ui for draw/impress, maybe because they seem not be fully
implemented right wrt matching empty paragraphs, so using regexps in writer and
letting them into editeng via this loophole is new territory for the editengine

(cherry picked from commit 46b52c22bfb6b145af3c8407fd96321381e78d99)

Change-Id: I2875b374a7ede8edd7f479254cbc2da36488abc8
Reviewed-on: https://gerrit.libreoffice.org/27155
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>